Updating about photo, updating loading animation, fixing overflow on project page

--- a/src/scss/work.scss
+++ b/src/scss/work.scss
@@ -34,7 +34,7 @@ nav {
     width: 100vw;
     flex: 1;
     height: inherit;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .container {
